# TS_Bio_Consulting

./: .gitignore  README.md  knowledge_data.pkl  test_imports.py
Backend/: .env  Dockerfile  alembic.ini  database.db  pyproject.toml  requirements.txt  test_ollama.py  test_passlib.py
Backend/ai-knowledge-base/embeddings/faiss_index/: index.pkl
Backend/alembic/: env.py
Backend/alembic/versions/: 5615b95621d1_add_password_column_to_users_table.py  830baf728b14_add_password_column_to_users_table.py  b045f26021e1_initial.py
Backend/app/: auth.py  main.py
Backend/app/ai/: __init__.py  generate_report.py  knowledge_base.py  legal_chatbot.py  rag_engine.py
Backend/app/core/: knowledge_base.py  security.py
Backend/app/crud/: audit.py  report.py  user.py
Backend/app/database/: base.py  database.py
Backend/app/models/: audit.py  base.py  chat_message.py  contact_message.py  report.py  task.py  team.py  user.py
Backend/app/routers/: ai.py  audits.py  auth.py  chat.py  contact.py  dashboard.py  export.py  tasks.py  teams.py
Backend/app/schemas/: audit.py  contact.py  report.py  task.py  team.py  user.py
Backend/app/services/: email_service.py
Deployment_Guides/: deploy_fastapi_on_render.md
ai-knowledge-base/: prompt_library.txt
ai-knowledge-base/embeddings/faiss_index/: index.faiss
frontend-react/: index.html  package-lock.json  package.json  tsconfig.json
frontend-react/src/: App.css  App.jsx  main.jsx
frontend-react/src/Forms/: AuditForm.jsx
frontend-react/src/components/: AdminLogin.jsx  Header.jsx  (+6 more)
scripts/: populate_kb.py  seed_database.py
(+32 files in other folders)
