[tool.poetry]
name = "tsbio-backend"
version = "1.0.0"
description = ""
authors = ["Tu Nombre <tu@email.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.0"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.10"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
langchain = "^0.3.1"
langchain-community = "^0.3.1"
langchain-ollama = "^0.2.0"
faiss-cpu = "^1.8.0"
pdfplumber = "^0.11.2"
python-multipart = "^0.0.9"
firebase-admin = "^6.5.0"
python-decouple = "^3.8"
scikit-learn = "^1.5.0"
numpy = "^1.24.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"